<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/CadastroTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_description"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:paddingBottom="8dp" />

    <ImageView
        android:id="@+id/photo_verstappen"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/f1game" />

    <EditText
        android:id="@+id/et_nome_equipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/equip_name" />

    <EditText
        android:id="@+id/et_nome_piloto1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pilot_1_name" />

    <EditText
        android:id="@+id/et_nome_numeroPiloto1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pilot_1_number" />

    <EditText
        android:id="@+id/et_nome_piloto2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pilot_2_name" />

    <EditText
        android:id="@+id/et_nome_numeroPiloto2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pilot_2_number" />

    <Button
        android:id="@+id/btn_salvar_equipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_team" />

</LinearLayout>
